index.css
@font-face {
    font-family: Unbounded;
    src: url("/src/fonts/unbounded/Unbounded.ttf") format("truetype");
}

@font-face {
    font-family: Unbounded-500;
    src: url("/src/fonts/unbounded/Unbounded-Medium.ttf") format("truetype");
}

@font-face {
    font-family: Unbounded-300;
    src: url("/src/fonts/unbounded/Unbounded-Light.ttf") format("truetype");
}

@font-face {
    font-family: Inter;
    src: url("/src/fonts/inter/Inter.ttf") format("truetype");
}

.Unbounded {
    font-family: "Unbounded";
    font-size: 70px;
    margin: 0;
    color: white;
}

.Unbounded-500 {
    font-family: "Unbounded-500";
    font-size: 70px;
    margin: 0;
    color: white;
}

.Unbounded-300 {
    font-family: "Unbounded-300";
    font-size: 70px;
    margin: 0;
    color: white;
}

.Inter {
    font-family: "Inter";
    font-size: 70px;
    margin: 0;
    color: white;
}

.font-preloading {
    display: flex;
    text-align: center;
    justify-content: space-evenly;
    margin-top: 20vh;
}

body,
html {
    background-color: #131313;
    margin: 0;
    height: 80%;
}

